--- a/d2/index.html
+++ b/d2/index.html
@@ -42,5 +42,10 @@
     </ul>
 
 
+    <!-- #8 - Given an HTML file with a UL element with the id "your-worst-enemy" that has no children, write JavaScript to construct a string that contains six LI tags each containing a random number and set the inner HTML property of ul#your-worst-enemy to that string. -->
+    <ul id="your-worst-enemy">
+        
+    </ul>
+
 </body>
 </html>
