--- a/d3/index.html
+++ b/d3/index.html
@@ -26,5 +26,16 @@
     <!-- #04 - Given an HTML page with that includes <input type=”text” id=”fancypants”>, write JavaScript that changes the background color of the textbox to #E8F5E9 when the caret is in the textbox and turns it back to its normal color when focus is elsewhere. -->
     <input type="text" id="fancypants">
 
+    <!-- #05 - Given an HTML page that includes a form with two password fields, write JavaScript that subscribes to the forms submission event and cancels it if the values in the two password fields differ. -->
+    <br><br>
+    <h1>Learning Objective 5 - Checking input fields</h1>
+    <form id="my-form">
+        <input type="password" name="password" id="my-form-password" placeholder="Password">
+        <input type="password" name="password-confirm" id="my-form-password-confirm" placeholder="Confirm Password">
+        <button type="submit">Submit</button>
+    </form>
+
+    <!-- #07 - Given an HTML page that has 300 DIVs, create one click event subscription that will print the id of the element clicked on to the console. -->
+
 </body>
 </html>
